fix overflowing slider arrows on mobile version

--- a/styles/Slider.module.css
+++ b/styles/Slider.module.css
@@ -37,8 +37,10 @@
 .arrowContainer:last-child {
   margin-right: 4%;
 }
-.arrow{
+
+.arrow {
   fill: #fff;
+
 }
 
 .head,
@@ -70,18 +72,25 @@
     height: 28vh;
   }
 
-  .arrowContainer{
-    top:0;
+  .arrowContainer {
+    top: 0;
     bottom: 50%;
   }
+
   .head,
-  .headText{
+  .headText {
     font-size: 1.4rem;
     padding-bottom: px;
-    top:160px;
+    top: 160px;
     left: 70px;
   }
-  .headText{
+
+  .headText {
     top: 175px;
+  }
+
+  .arrow {
+    width: 38px;
+    height: 38px;
   }
 }
